# rkhs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cursor/rules/: integration-priorities.mdc  super-workspace-context.mdc  tekne-core.mdc
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml
benches/: gram_scaling.rs  linalg_shootout.rs
examples/: README.md  associative_memory.rs  clam_clustering.rs  clam_vs_kmeans.rs  distribution_mmd.rs  gram_spectrum_rmt.rs  kernel_dmd.rs  kernel_rmt.rs  kernel_thinning.rs
src/: clam.rs  distribution_kernel.rs  graph_kernel.rs  krr_memory.rs  lib.rs  quantile_kernel.rs  simd.rs
tests/: rosetta_rkhs.rs
tests/fixtures/rosetta/: gen_rkhs.py  rkhs_kernels.json
