[package]
name = "rkhs"
version = "0.1.3"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
description = "Reproducing Kernel Hilbert Space: kernels, MMD, and Dense Associative Memory (LSE/LSR energy)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/rkhs"
homepage = "https://github.com/arclabs561/rkhs"
documentation = "https://docs.rs/rkhs"
keywords = ["kernel", "mmd", "rkhs", "associative-memory", "machine-learning"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]
ndarray = "0.16"
rand = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
clump = "0.4"
faer = "0.19"
kuji = "0.1"
rmt = "0.1"

[[bench]]
name = "gram_scaling"
path = "benches/gram_scaling.rs"
harness = false

[[bench]]
name = "linalg_shootout"
path = "benches/linalg_shootout.rs"
harness = false
