[package]
name = "rkhs"
version = "0.3.0"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
description = "Positive-definite kernels, Gram matrices, MMD two-sample tests, quantile and distribution kernels, and a kernel ridge regression associative memory"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/rkhs"
homepage = "https://github.com/arclabs561/rkhs"
documentation = "https://docs.rs/rkhs"
keywords = ["kernel", "mmd", "rkhs", "associative-memory", "machine-learning"]
categories = ["algorithms", "science", "mathematics"]

[workspace]

[dependencies]
ndarray = "0.16"
rand = "0.9"
hopfield = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
clump = "0.5"
faer = "0.19"
drawset = "0.1"
rmt = "0.1"
# Rosetta cross-language correctness fixtures (tests/rosetta_*.rs).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "gram_scaling"
path = "benches/gram_scaling.rs"
harness = false

[[bench]]
name = "linalg_shootout"
path = "benches/linalg_shootout.rs"
harness = false
